--- a/charts/v2/airbyte/templates/airbyte-server/deployment.yaml
+++ b/charts/v2/airbyte/templates/airbyte-server/deployment.yaml
@@ -1,13 +1,8 @@
-{{- if .Values.server.enabled }}
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ .Release.Name }}-server
+  name: airbyte-server
   labels:
-    {{- include "airbyte.labels" . | nindent 4 }}
-    {{- if .Values.server.extraLabels }}
-    {{ toYaml (mergeOverwrite .Values.server.extraLabels .Values.global.extraLabels) | nindent 4 }}
-    {{- end }}
   annotations:
-    {{ toYaml .Values.server.annotations | nindent 4 }}
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "0"
