--- a/charts/v2/airbyte/templates/airbyte-server/deployment.yaml
+++ b/charts/v2/airbyte/templates/airbyte-server/deployment.yaml
@@ -6,3 +6,17 @@ metadata:
   annotations:
     helm.sh/hook: pre-install,pre-upgrade
     helm.sh/hook-weight: "0"
+
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: airbyte-server
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: airbyte-server
+    spec:
+      containers:
+        - name: airbyte-server
+          image: airbyte/airbyte-server:0.1.0
